2003-02-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread_rwlock_unlock.c
	(__pthread_rwlock_unlock): Release internal lock early.  Don't try
	to wake up readers if there are none.

	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_unlock.S:
	Release internal lock before wake threads.

2003-02-26  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-rwlock10 and tst-rwlock11.
	* tst-rwlock8.c: Initialize lock with INIT.  Allow INIT to be
	predefined.
	* tst-rwlock9.c: Likewise.
	* tst-rwlock10.c: New file.
	* tst-rwlock11.c: New file.

	* Makefile (tests): Add tst-dlsym1.
	* tst-dlsym1.c: New file.

	* init.c (__pthread_initialize_minimal_internal): Set
	GL(dl_error_catch_tsd) to __libc_dl_error_tsd.
	* Versions (libc:GLIBC_PRIVATE): Export __libc_dl_error_tsd.

2003-02-24  Ulrich Drepper  <drepper@redhat.com>

	* sem_open.c (sem_open): Fix handling of O_CREAT without O_EXCL.

	* tst-cond2.c: Fix sychronization with child.

	* tst-rwlock8.c (reader_thread): Remove unused variable.

	* Makefile: Add rules to build and run tst-tls3.
	* tst-tls3.c: New file.
	* tst-tls3mod.c: New file.

	* Makefile (tests): Add tst-rwlock8 and tst-rwlock9.
	* tst-rwlock8.c: New file.
	* tst-rwlock9.c: New file.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_rdlock.S: Fix
	complete broken rwlock implementation.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_timedrdlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_timedwrlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_unlock.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_wrlock.S: Likewise.
	* sysdeps/pthread/pthread_rwlock_rdlock.c: Likewise.
	* sysdeps/pthread/pthread_rwlock_timedrdlock.c: Likewise.
	* sysdeps/pthread/pthread_rwlock_timedwrlock.c: Likewise.
	* sysdeps/pthread/pthread_rwlock_unlock.c: Likewise.
	* sysdeps/pthread/pthread_rwlock_wrlock.c: Likewise.

2003-02-23  Roland McGrath  <roland@redhat.com>
